[package]
name = "xcm-transactor-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
# local
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
common-primitives = { path = "../common", default-features = false }

# substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# xcm/polkadot
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.32", default-features = false }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }

[features]
default = ["std"]
kusama = []
polkadot = []
std = [
    "common-primitives/std",
    "cumulus-primitives-core/std",
    "frame-support/std",
    "sp-std/std",
    "xcm/std",
]
