[package]
name = "xcm-transactor-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
# local
common-primitives = { path = "../common", default-features = false }

# substrate
frame-support = { workspace = true }
sp-std = { workspace = true }

# xcm/polkadot
xcm = { workspace = true }

# cumulus
cumulus-primitives-core = { workspace = true }

[features]
default = ["std"]
ksm = []
dot = []
std = [
    "common-primitives/std",
    "cumulus-primitives-core/std",
    "frame-support/std",
    "parity-scale-codec/std",
    "sp-std/std",
    "xcm/std",
]
