[package]
name = "xcm-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
sp-std = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }


staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

[features]
default = [ "std" ]
std = [
    "sp-std/std",
    "frame-support/std",
    "sp-runtime/std",
    "staging-xcm/std",
    "staging-xcm-executor/std"
]
