[package]
name = "sidechain-block-verification"
description = "Verification logic for sidechain blocks"
version = "0.9.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"


[dependencies]
log = { version = "0.4.17", default-features = false }
thiserror = { version = "1.0.26", optional = true }

# local deps
itp-types = { path = "../../primitives/types", default-features = false }
itp-utils = { path = "../../primitives/utils", default-features = false }
sidechain-primitives = { path = "../../primitives/sidechain", default-features = false }

# substrate deps
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-consensus-slots = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

# sgx deps
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
sgx_tstd = { branch = "master", features = ["untrusted_fs", "net", "backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std"]
std = [
    "log/std",
    "thiserror",
    # local
    "itp-types/std",
    "itp-utils/std",
    "sidechain-primitives/std",
    # substrate
    "frame-support/std",
    "sp-consensus-slots/std",
    "sp-core/std",
    "sp-runtime/std",
]
sgx = [
    "itp-utils/sgx",
    "sgx_tstd",
    "thiserror-sgx",
]

[dev-dependencies]
parentchain-test = { path = "../../parentchain/test" }
sidechain-test = { path = "../../sidechain/test" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
