[package]
name = "ias-verify"
version = "0.1.4"
description = "a certificate verification and IAS report parser crate for the teerex pallet"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "4.0.0-dev"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "4.0.0-dev"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "4.0.0-dev"
#features = ["disable_panic_handler", "disable_oom"]

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "4.0.0-dev"

[dependencies.webpki]
git = 'https://github.com/scs/webpki-nostd.git'
default_features = false

[dev-dependencies]
hex-literal = "*"

[features]
default = ['std']
std = [
    'base64/std',
    'codec/std',
    'chrono/std',
    'frame-support/std',
    'scale-info/std',
    'serde_json/std',
    'sp-core/std',
    'sp-std/std',
    'sp-io/std',
    'webpki/std',
]