[package]
name = "ias-verify"
version = "0.1.4"
description = "a certificate verification and IAS report parser crate for the teerex pallet"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false }
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
webpki = { default-features = false, git = "https://github.com/scs/webpki-nostd.git" }

# substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[dev-dependencies]
hex-literal = "*"

[features]
default = ["std"]
std = [
    "base64/std",
    "chrono/std",
    "codec/std",
    "scale-info/std",
    "serde_json/std",
    "webpki/std",
    # substrate
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
