[package]
name = "sgx-verify"
version = "0.1.4"
description = "a certificate verification and IAS report parser crate for the teerex pallet"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "GPL-3.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
parity-scale-codec = { workspace = true }
der = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
ring = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
webpki = { workspace = true }
x509-cert = { workspace = true }

# local
teerex-primitives = { path = "../../primitives/teerex", default-features = false }

# substrate dependencies
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "base64/std",
    "chrono/std",
    "parity-scale-codec/std",
    "der/std",
    "hex/std",
    "log/std",
    "ring/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    "webpki/std",
    "x509-cert/std",
    # local
    "teerex-primitives/std",
    # substrate
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
# Export ias/dcap data when we want to use them
# in tests/benchmarks in the pallets.
test-data = []
